--- a/app/src/main/res/layout/fragment_bottom_properties_dialog.xml
+++ b/app/src/main/res/layout/fragment_bottom_properties_dialog.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/color_selected"
     android:layout_height="wrap_content">
 
 
@@ -22,7 +23,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sbOpacity"
-        tools:background="@android:color/black"
+        tools:background="@color/color_selected"
         tools:listitem="@layout/row_color_picker"
         android:layout_alignParentRight="true" />
 
