--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -2,33 +2,90 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportHeight="108"
-    android:viewportWidth="108">
+    android:viewportWidth="1250"
+    android:viewportHeight="1250">
+  <group android:translateX="225"
+      android:translateY="225">
     <path
-        android:fillType="evenOdd"
-        android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1">
+        android:pathData="M400,400m-392.596,0a392.596,392.596 0,1 1,785.192 0a392.596,392.596 0,1 1,-785.192 0"
+        android:fillColor="#FFD93B"/>
+    <group>
+      <clip-path android:pathData="M400,400m-392.596,0a392.596,392.596 0,1 1,785.192 0a392.596,392.596 0,1 1,-785.192 0 M 0,0"/>
+      <path
+          android:pathData="M170.916,548.165l467.90497,-270.098l312.346,312.34604l-337.414,337.414l-98.64801,53.65497l0.0,-74.40497l-323.576,-323.57703l-30.644012,-29.333008l4.5200043,-5.4370117z">
         <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="78.5885"
-                android:endY="90.9159"
-                android:startX="48.7653"
-                android:startY="61.0927"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
+          <gradient 
+              android:startY="748.8369"
+              android:startX="671.165"
+              android:endY="382.7668"
+              android:endX="432.424"
+              android:type="linear">
+            <item android:offset="0.1092" android:color="#FFFFD93B"/>
+            <item android:offset="0.6769" android:color="#FFD6AD00"/>
+          </gradient>
         </aapt:attr>
-    </path>
+      </path>
+    </group>
     <path
+        android:pathData="M160.885,277.816h478.227v276.351h-478.227z"
+        android:fillColor="#414042"/>
+    <path
+        android:pathData="M454.954,415.99m-119.647,0a119.647,119.647 0,1 1,239.294 0a119.647,119.647 0,1 1,-239.294 0"
+        android:fillColor="#D1D3D4"/>
+    <path
+        android:pathData="M160.885,277.816h478.227v52.334h-478.227z"
+        android:fillColor="#D1D3D4"/>
+    <path
+        android:pathData="M160.885,501.833h478.227v52.334h-478.227z"
+        android:fillColor="#D1D3D4"/>
+    <path
+        android:pathData="M454.954,415.99m-101.962,0a101.962,101.962 0,1 1,203.924 0a101.962,101.962 0,1 1,-203.924 0"
+        android:fillColor="#22363F"/>
+    <path
+        android:pathData="M454.954,415.99m-73.666,0a73.666,73.666 0,1 1,147.332 0a73.666,73.666 0,1 1,-147.332 0"
+        android:strokeWidth="5"
+        android:fillColor="#4E7387"
+        android:strokeColor="#578CA3"/>
+    <path
+        android:pathData="M494.982,415.99c0,22.104 -17.923,40.03 -40.029,40.03c-22.107,0 -40.027,-17.926 -40.027,-40.03c0,-22.107 17.92,-40.027 40.027,-40.027C477.06,375.963 494.982,393.883 494.982,415.99z"
+        android:fillColor="#204856"/>
+    <path
+        android:pathData="M454.954,415.99m-25.292,0a25.292,25.292 0,1 1,50.584 0a25.292,25.292 0,1 1,-50.584 0"
+        android:fillColor="#092830"/>
+    <path
+        android:pathData="M545.796,301.207c0,4.883 -4.111,8.843 -9.182,8.843H378.695c-5.071,0 -9.181,-3.96 -9.181,-8.843v-61.104c0,-4.883 4.11,-8.842 9.181,-8.842h157.919c5.07,0 9.182,3.959 9.182,8.842V301.207z"
+        android:fillColor="#D1D3D4"/>
+    <path
+        android:pathData="M408.256,368.872m-24.854,0a24.854,24.854 0,1 1,49.708 0a24.854,24.854 0,1 1,-49.708 0"
+        android:strokeAlpha="0.6"
         android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1" />
+        android:fillAlpha="0.6"/>
+    <path
+        android:pathData="M431.871,399.999m-7.907,0a7.907,7.907 0,1 1,15.814 0a7.907,7.907 0,1 1,-15.814 0"
+        android:strokeAlpha="0.6"
+        android:fillColor="#FFFFFF"
+        android:fillAlpha="0.6"/>
+    <path
+        android:pathData="M531.724,275.326c0,4.883 -3.958,8.842 -8.844,8.842h-74.259c-4.882,0 -8.844,-3.959 -8.844,-8.842v-26.527c0,-4.884 3.962,-8.844 8.844,-8.844h74.259c4.886,0 8.844,3.96 8.844,8.844V275.326z"
+        android:fillColor="#4E7387"/>
+    <path
+        android:pathData="M423.964,257.051c0,4.883 -3.96,8.843 -8.844,8.843h-15.542c-4.883,0 -8.843,-3.959 -8.843,-8.843v-4.716c0,-4.883 3.959,-8.843 8.843,-8.843h15.542c4.884,0 8.844,3.959 8.844,8.843V257.051z"
+        android:fillColor="#22363F"/>
+    <path
+        android:pathData="M421.115,278.421c0,3.419 -2.773,6.189 -6.189,6.189c-3.419,0 -6.191,-2.771 -6.191,-6.189s2.772,-6.19 6.191,-6.19C418.342,272.23 421.115,275.002 421.115,278.421z"
+        android:fillColor="#BE1E2D"/>
+    <path
+        android:pathData="M202.475,262.062h58.775v15.754h-58.775z"
+        android:fillColor="#939598"/>
+    <path
+        android:pathData="M600.603,277.816h38.51v276.055h-38.51z"
+        android:strokeAlpha="0.3"
+        android:fillColor="#939598"
+        android:fillAlpha="0.3"/>
+    <path
+        android:pathData="M160.885,277.816h19.255v276.055h-19.255z"
+        android:strokeAlpha="0.3"
+        android:fillColor="#939598"
+        android:fillAlpha="0.3"/>
+  </group>
 </vector>
