--- a/app/src/main/res/drawable/rounded_border_text_view.xml
+++ b/app/src/main/res/drawable/rounded_border_text_view.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="2dp"
-        android:color="#FFFFFF" />
+        android:color="#732620" />
 
     <padding
         android:bottom="2dp"
