--- a/app/src/main/res/layout/activity_collage_selected_image.xml
+++ b/app/src/main/res/layout/activity_collage_selected_image.xml
@@ -1,215 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/editCollageRootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".collage.CollageSelectedActivity">
 
     <LinearLayout
+        android:id="@+id/toolbarLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/skyblue_light"
-        android:orientation="vertical"
-        android:weightSum="20"
+        android:layout_height="@dimen/dp60"
+        android:orientation="horizontal"
+        android:layout_alignParentTop="true"
         >
-
-        <RelativeLayout
-            android:id="@+id/idCollageRLayout"
+        <include
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/white"
-            android:orientation="horizontal"
-            android:layout_weight="15.00">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:weightSum="2">
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dip"
-                    android:layout_weight="1" >
-                    <!--iv_1-->
-                    <ImageView
-                        android:id="@+id/idCollageFrameShape1"
-                        android:layout_width="fill_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="matrix" >
-                    </ImageView>
-                </FrameLayout>
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dip"
-                    android:background="@color/colorPrimary"
-                    android:layout_weight="1" >
-
-                    <ImageView
-                        android:id="@+id/idCollageFrameShape2"
-                        android:layout_width="fill_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="matrix" >
-                    </ImageView>
-
-
-                </FrameLayout>
-            </LinearLayout>
-
-
-            <ImageView
-                android:id="@+id/idMainCollageFrameImage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:scaleType="fitXY"
-                />
-        </RelativeLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp1"
-            android:background="@color/white"
-            android:layout_marginTop="@dimen/dp1"
-            android:layout_marginBottom="@dimen/dp1">
-        </View>
-
-        <android.support.v7.widget.RecyclerView
-            android:layout_weight="2.75"
-            android:id="@+id/idCollageEditToolsRecycleView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:paddingLeft="@dimen/dp1"
             android:paddingRight="@dimen/dp1"
-            android:background="@android:color/black"
+            layout="@layout/toolbar_collage_layout"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/idCollageLLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/frameRecyclerLayout"
+        android:layout_below="@+id/toolbarLayout"
+        android:background="@color/white"
+        android:padding="@dimen/dp7"    >
+
+
+
+            <RelativeLayout
+                android:id="@+id/idCollageRLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                    <FrameLayout
+                        android:id="@+id/frameShape1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="@dimen/dp1"
+                        android:padding="@dimen/selected_border_size"
+                         >
+
+                       <!-- android:background="@color/color_shape_selected"-->
+                        <ImageView
+                            android:id="@+id/idCollageFrameShape1"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/svg_gallery_place_holder_48"
+                            android:scaleType="centerInside"
+                            android:layout_gravity="center"
+                            android:background="@color/color_placeholder"
+                            />
+                    </FrameLayout>
+
+                <ImageView
+                    android:id="@+id/idMainCollageFrameImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:scaleType="fitXY"
+                    />
+            </RelativeLayout>
+        </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/frameRecyclerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bootomLayout"
+        android:orientation="vertical"
+        android:background="@color/white"
+        android:visibility="gone">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/idCollageListRecycleView"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:paddingLeft="@dimen/dp1"
+            android:paddingRight="@dimen/dp1"
+            android:background="@color/color_selected"
             android:orientation="horizontal"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            android:visibility="gone"
             />
 
         <android.support.v7.widget.RecyclerView
-            android:layout_weight="2.75"
-            android:id="@+id/idCollageListRecycleView"
+            android:id="@+id/imageEffectsThumbnails"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="50dp"
             android:paddingLeft="@dimen/dp1"
             android:paddingRight="@dimen/dp1"
-            android:background="@android:color/white"
+            android:background="@color/color_selected"
+            android:orientation="horizontal"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            android:visibility="gone"
+            />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/toolsRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:paddingLeft="@dimen/dp1"
+            android:paddingRight="@dimen/dp1"
+            android:background="@color/color_selected"
             android:orientation="horizontal"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             android:visibility="gone"
             />
 
 
-
-        <View
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/idCollageFrameRecycleView"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp1"
-            android:background="@color/white"
-            android:layout_marginTop="@dimen/dp1"
-            android:layout_marginBottom="@dimen/dp1">
-        </View>
-
-        <!--***************************-->
+            android:layout_height="50dp"
+            android:paddingLeft="@dimen/dp1"
+            android:paddingRight="@dimen/dp1"
+            android:background="@color/color_selected"
+            android:orientation="horizontal"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            android:visibility="gone"
+            />
 
         <LinearLayout
-            android:layout_weight="2.25"
-            android:id="@+id/ll1"
+            android:id="@+id/collageEffectsSeekbarLLayout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:background="@color/skyblue_light"
-            android:weightSum="20" >
-
-            <LinearLayout
-                android:layout_weight="5"
-                android:id="@+id/idCollageEditToolsCloseLLayout"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="left|center"
-                android:orientation="vertical"
-                android:weightSum="10"
-                >
-
-                <ImageView
-                    android:layout_weight="5"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    app:srcCompat="@drawable/ic_close"
-                    tools:ignore="VectorDrawableCompat" />
-
-                <TextView
-                    android:layout_weight="5"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:text="Close"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:textColor="@android:color/white"
-                    android:paddingBottom="@dimen/dp5"/>
-            </LinearLayout>
-
-
-
-
-            <LinearLayout
-                android:layout_weight="5"
-                android:layout_width="0dp"
-                android:layout_height="match_parent">
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_weight="5"
-                android:id="@+id/idCollageEditBackLLayout"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="left|center"
-                android:orientation="vertical"
-                >
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@android:drawable/ic_media_previous"
-                    tools:ignore="VectorDrawableCompat" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Back"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:textColor="@android:color/white" />
-            </LinearLayout>
-
-
-
-            <LinearLayout
-                android:layout_weight="5"
-                android:id="@+id/idCollageEditNextLLayout"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="right|center"
-                android:orientation="vertical" >
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@android:drawable/ic_media_next"
-                    tools:ignore="VectorDrawableCompat" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Next"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:textColor="@android:color/white" />
-            </LinearLayout>
+            android:layout_height="wrap_content"
+            android:visibility="gone" >
+            <include
+                layout="@layout/adjust_collage_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
         </LinearLayout>
 
+       <!-- <android.support.v7.widget.AppCompatSeekBar
+            android:id="@+id/sb_brightness"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:paddingLeft="@dimen/dp1"
+            android:paddingRight="@dimen/dp1"
+            android:background="@color/color_selected"
+            android:visibility="gone"/>-->
 
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+
+
+    <LinearLayout
+        android:id="@+id/bootomLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        >
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/dp10"
+            android:paddingBottom="@dimen/dp10"
+            android:paddingLeft="@dimen/dp1"
+            android:paddingRight="@dimen/dp1"
+            layout="@layout/collage_edittools_layout"
+            />
+    </LinearLayout>
+
+
+</RelativeLayout>
+
+
 
