--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,128 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/homeActivityLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/svg_home_bg"
+    android:orientation="vertical"
     tools:context=".activity.HomeActivity">
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:paddingLeft="@dimen/dp40"
+        android:paddingRight="@dimen/dp40"
+        android:paddingTop="@dimen/dp50"
+        android:paddingBottom="@dimen/dp50"
         >
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp1"
-            android:layout_marginTop="@dimen/dp30"
-            android:layout_marginBottom="@dimen/dp10"
-            android:background="@color/black"/>
 
         <LinearLayout
-            android:id="@+id/idCameraLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2"
-            android:gravity="center">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:background="@drawable/svg_mobile"
+            android:weightSum="100"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:layout_weight="20"
+                />
 
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="60dp"
-                android:gravity="right|center"
-                android:text="@string/strCamera"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textSize="@dimen/dp30"
-                android:textStyle="normal"
+            <LinearLayout
+                android:id="@+id/cameraLayout"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:layout_weight="17"
+                android:gravity="center"
+                android:weightSum="100"
+                >
+
+
+                <ImageView
+                    android:id="@+id/cameraImgView"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:src="@drawable/ic_home_camera"
+                    android:gravity="center"
+                    android:layout_weight="60"
+                    />
+                <TextView
+                    android:layout_weight="40"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:textStyle="normal"
+                    android:textSize="@dimen/sp20"
+                    android:maxLines="1"
+                    android:gravity="top|center"
+                    android:text="@string/text_camera"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:layout_weight="2"
                 />
-            <ImageView
-                android:layout_weight=".70"
-                android:layout_width="0dp"
-                android:layout_height="60dp"
-                android:src="@drawable/ic_launcher"
-                android:gravity="left|center"
+            <LinearLayout
+                android:id="@+id/galleryLayout"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:layout_weight="17"
+                android:gravity="center"
+                android:weightSum="100">
+
+                <ImageView
+                    android:id="@+id/galleryImgView"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:src="@drawable/ic_home_gallery"
+                    android:gravity="center"
+                    android:visibility="visible"
+                    android:layout_weight="60"
+                    />
+
+                <TextView
+                    android:layout_weight="40"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:textStyle="normal"
+                    android:textSize="@dimen/sp20"
+                    android:maxLines="1"
+                    android:gravity="top|center"
+                    android:text="@string/text_gallery"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:layout_weight="2"
                 />
+            <LinearLayout
+                android:id="@+id/collageLayout"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:layout_weight="17"
+                android:gravity="center"
+                android:weightSum="100"
+                >
+
+                <ImageView
+                    android:id="@+id/collageImgView"
+                    android:layout_weight="60"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:src="@drawable/ic_home_collage"
+                    android:gravity="center"
+                    />
+                <TextView
+                    android:layout_weight="40"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:textStyle="normal"
+                    android:textSize="@dimen/sp20"
+                    android:maxLines="1"
+                    android:gravity="center"
+                    android:text="@string/text_collage"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:layout_weight="20"
+                />
+
         </LinearLayout>
-
-
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp1"
-            android:layout_marginTop="@dimen/dp10"
-            android:layout_marginBottom="@dimen/dp10"
-            android:background="@color/black"/>
-
-
-
-        <LinearLayout
-            android:id="@+id/idGalleryLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2"
-            android:gravity="center">
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="60dp"
-                android:gravity="right|center"
-                android:text="@string/strGallery"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textSize="@dimen/dp30"
-                android:textStyle="normal"
-                />
-            <ImageView
-                android:layout_weight=".70"
-                android:layout_width="0dp"
-                android:layout_height="60dp"
-                android:src="@drawable/ic_img_gallary"
-                android:gravity="left|center"
-                />
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp1"
-            android:layout_marginTop="@dimen/dp10"
-            android:layout_marginBottom="@dimen/dp10"
-            android:background="@color/black"/>
-
-        <LinearLayout
-            android:id="@+id/idCollageLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2"
-            android:gravity="center">
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="60dp"
-                android:gravity="right|center"
-                android:text="@string/strCollage"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textSize="@dimen/dp30"
-                android:textStyle="normal"
-                />
-            <ImageView
-                android:layout_weight=".70"
-                android:layout_width="0dp"
-                android:layout_height="60dp"
-                android:src="@drawable/ic_collage"
-                android:gravity="left|center"
-                />
-        </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp1"
-            android:layout_marginTop="@dimen/dp10"
-            android:layout_marginBottom="@dimen/dp10"
-            android:background="@color/black"/>
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
