--- a/app/src/main/res/layout/fragment_add_text_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_text_dialog.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B3000000"
+    android:background="@color/color_selected"
     android:orientation="vertical">
 
     <TextView
@@ -19,7 +19,7 @@
         android:padding="10dp"
         android:text="Done"
         android:textAllCaps="false"
-        android:textColor="@color/white"
+        android:textColor="@color/color_icon"
         android:textSize="15sp" />
 
     <EditText
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            tools:background="@android:color/black"
+            tools:background="@color/color_icon"
             tools:listitem="@layout/row_color_picker" />
 
     </RelativeLayout>
