--- a/app/src/main/res/layout/row_collage_edittools.xml
+++ b/app/src/main/res/layout/row_collage_edittools.xml
@@ -1,93 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/collageEditItemViewLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/dp8"
+    android:layout_marginLeft="@dimen/dp15"
     android:layout_marginTop="@dimen/dp2"
-    android:layout_marginRight="@dimen/dp8"
+    android:layout_marginRight="@dimen/dp15"
     android:layout_marginBottom="@dimen/dp2"
     android:padding="4dp"
-    tools:background="@android:color/black">
+    tools:background="@color/color_theme">
 
 
     <ImageView
         android:id="@+id/idCollageEditToolsImgView"
-        android:layout_width="@dimen/dp30"
-        android:layout_height="@dimen/dp30"
+        android:layout_width="@dimen/dp25"
+        android:layout_height="@dimen/dp25"
         android:layout_margin="4dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:src="@drawable/ic_brush" />
+        tools:src="@drawable/svg_collage"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/idCollageEditToolsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textColor="@android:color/white"
+        android:layout_marginTop="3dp"
+        android:textColor="@color/color_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/idCollageEditToolsImgView"
-        tools:text="@string/label_brush" />
+        android:textSize="@dimen/dp9"
+        tools:text="@string/label_brush"
+        android:textStyle="bold"/>
 
 </android.support.constraint.ConstraintLayout>
 
-<!--
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/dp2"
-    android:layout_marginBottom="@dimen/dp2"
-    android:padding="@dimen/dp2"
-    tools:background="@android:color/black">
 
-    <LinearLayout
-        android:layout_width="@dimen/dp60"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical" >
-
-        <ImageView
-            android:id="@+id/idCollageEditToolsImgView"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp30"
-            tools:src="@drawable/ic_brush"
-            tools:ignore="VectorDrawableCompat" />
-
-        <TextView
-            android:id="@+id/idCollageEditToolsText"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp20"
-            tools:text="@string/label_brush"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:textColor="@android:color/white" />
-    </LinearLayout>
-    &lt;!&ndash;<ImageView
-        android:id="@+id/idCollageEditToolsImgView"
-        android:layout_width="@dimen/dp30"
-        android:layout_height="@dimen/dp30"
-        android:layout_margin="4dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:src="@drawable/ic_brush" />
-
-    <TextView
-        android:id="@+id/idCollageEditToolsText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textColor="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgToolIcon"
-        tools:text="@string/label_brush" />
-&ndash;&gt;
-</android.support.constraint.ConstraintLayout>-->
