--- a/app/src/main/res/layout/row_collage_filter.xml
+++ b/app/src/main/res/layout/row_collage_filter.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:layout_margin="2dp">
+    android:layout_margin="1dp">
 
     <ImageView
         android:id="@+id/idCollageItemViewImage"
@@ -17,20 +17,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/backgrounds/scenic" />
+        tools:src="@drawable/collage_1_0" />
 
     <TextView
         android:id="@+id/idCollageItemViewText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#90000000"
+        android:background="@color/color_theme"
         android:gravity="center"
         android:padding="4dp"
-        android:textColor="@android:color/white"
+        android:textColor="@color/white"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="@+id/idCollageItemViewImage"
         app:layout_constraintEnd_toEndOf="@+id/idCollageItemViewImage"
         app:layout_constraintStart_toStartOf="@+id/idCollageItemViewImage"
-        tools:text="@tools:sample/full_names" />
+        tools:text=""
+        android:visibility="gone"/>
 
 </android.support.constraint.ConstraintLayout>
