--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,157 +1,109 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="editor_size">35dp</dimen>
-    <dimen name="normal_margin">8dp</dimen>
-    <dimen name="large_margin">16dp</dimen>
 
 
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-
-
-
-    <dimen name="dp1">1dp</dimen>
-    <dimen name="dp2">2dp</dimen>
-    <dimen name="dp3">3dp</dimen>
-    <dimen name="dp4">4dp</dimen>
-
-    <dimen name="dp5">5dp</dimen>
-    <dimen name="dp6">6dp</dimen>
-    <dimen name="dp7">7dp</dimen>
-    <dimen name="dp8">8dp</dimen>
-
-    <dimen name="dp9">9dp</dimen>
-    <dimen name="dp10">10dp</dimen>
-    <dimen name="dp11">11dp</dimen>
-    <dimen name="dp12">12dp</dimen>
-
-
-
-
-
-
-
-    <dimen name="dp13">13dp</dimen>
-    <dimen name="dp14">14dp</dimen>
-    <dimen name="dp15">15dp</dimen>
-    <dimen name="dp16">16dp</dimen>
-
-    <dimen name="dp17">17dp</dimen>
-    <dimen name="dp18">18dp</dimen>
-    <dimen name="dp19">19dp</dimen>
-    <dimen name="dp20">20dp</dimen>
-
-    <dimen name="dp21">21dp</dimen>
-    <dimen name="dp22">22dp</dimen>
-    <dimen name="dp23">23dp</dimen>
-    <dimen name="dp24">24dp</dimen>
-    <dimen name="dp25">25dp</dimen>
-    <dimen name="dp26">26dp</dimen>
-    <dimen name="dp27">27dp</dimen>
-    <dimen name="dp28">28dp</dimen>
-    <dimen name="dp29">29dp</dimen>
-    <dimen name="dp30">30dp</dimen>
-
-    <dimen name="dp31">31dp</dimen>
-    <dimen name="dp32">32dp</dimen>
-    <dimen name="dp33">33dp</dimen>
-    <dimen name="dp34">34dp</dimen>
-    <dimen name="dp35">35dp</dimen>
-    <dimen name="dp36">36dp</dimen>
-    <dimen name="dp37">37dp</dimen>
-    <dimen name="dp38">38dp</dimen>
-    <dimen name="dp39">39dp</dimen>
-    <dimen name="dp40">40dp</dimen>
-
-
-    <dimen name="dp50">50dp</dimen>
-    <dimen name="dp55">55dp</dimen>
-    <dimen name="dp60">60dp</dimen>
-    <dimen name="dp70">70dp</dimen>
-    <dimen name="dp80">80dp</dimen>
-    <dimen name="dp85">85dp</dimen>
-    <dimen name="dp90">90dp</dimen>
-    <dimen name="dp95">95dp</dimen>
-    <dimen name="dp100">100dp</dimen>
-    <dimen name="dp110">110dp</dimen>
-    <dimen name="dp120">120dp</dimen>
-    <dimen name="dp130">130dp</dimen>
-
-
-
-
-
-
-
-
-    <dimen name="sp1">1sp</dimen>
-    <dimen name="sp2">2sp</dimen>
-    <dimen name="sp3">3sp</dimen>
-    <dimen name="sp4">4sp</dimen>
-
-    <dimen name="sp5">5sp</dimen>
-    <dimen name="sp6">6sp</dimen>
+    <!--Size in SP-->
+    <dimen name="sp350">350sp</dimen>
+    <dimen name="sp300">300sp</dimen>
+    <dimen name="sp250">250sp</dimen>
+    <dimen name="sp230">230sp</dimen>
+    <dimen name="sp220">220sp</dimen>
+    <dimen name="sp215">215sp</dimen>
+    <dimen name="sp200">200sp</dimen>
+    <dimen name="sp190">190sp</dimen>
+    <dimen name="sp180">180sp</dimen>
+    <dimen name="sp170">170sp</dimen>
+    <dimen name="sp165">165sp</dimen>
+    <dimen name="sp160">160sp</dimen>
+    <dimen name="sp150">150sp</dimen>
+    <dimen name="sp130">130sp</dimen>
+    <dimen name="sp100">100sp</dimen>
+    <dimen name="sp80">80sp</dimen>
+    <dimen name="sp70">70sp</dimen>
+    <dimen name="sp60">60sp</dimen>
+    <dimen name="sp40">40sp</dimen>
+    <dimen name="sp45">45sp</dimen>
+    <dimen name="sp50">50sp</dimen>
+    <dimen name="sp35">35sp</dimen>
+    <dimen name="sp32">32sp</dimen>
+    <dimen name="sp30">30sp</dimen>
+    <dimen name="sp25">25sp</dimen>
+    <dimen name="sp20">20sp</dimen>
+    <dimen name="sp18">18sp</dimen>
+    <dimen name="sp16">16sp</dimen>
+    <dimen name="sp15">15sp</dimen>
+    <dimen name="sp14">14sp</dimen>
+    <dimen name="sp13">13sp</dimen>
+    <dimen name="sp12">12sp</dimen>
+    <dimen name="sp10">10sp</dimen>
     <dimen name="sp7">7sp</dimen>
     <dimen name="sp8">8sp</dimen>
+    <dimen name="sp6">6sp</dimen>
+    <dimen name="sp5">5sp</dimen>
+    <dimen name="sp4">4sp</dimen>
+    <dimen name="sp3">3sp</dimen>
+    <dimen name="sp2">2sp</dimen>
+    <dimen name="sp1">1sp</dimen>
+    <dimen name="sp0">0sp</dimen>
 
-    <dimen name="sp9">9sp</dimen>
-    <dimen name="sp10">10sp</dimen>
-    <dimen name="sp11">11sp</dimen>
-    <dimen name="sp12">12sp</dimen>
+    <!--Size in DP-->
+    <dimen name="dp350">350dp</dimen>
+    <dimen name="dp300">300dp</dimen>
+    <dimen name="dp250">250dp</dimen>
+    <dimen name="dp230">230dp</dimen>
+    <dimen name="dp220">220dp</dimen>
+    <dimen name="dp215">215dp</dimen>
+    <dimen name="dp200">200dp</dimen>
+    <dimen name="dp190">190dp</dimen>
+    <dimen name="dp180">180dp</dimen>
+    <dimen name="dp170">170dp</dimen>
+    <dimen name="dp165">165dp</dimen>
+    <dimen name="dp160">160dp</dimen>
+    <dimen name="dp150">150dp</dimen>
+    <dimen name="dp130">130dp</dimen>
+    <dimen name="dp100">100dp</dimen>
+    <dimen name="dp95">95dp</dimen>
+    <dimen name="dp90">90dp</dimen>
+    <dimen name="dp85">85dp</dimen>
+    <dimen name="dp80">80dp</dimen>
+    <dimen name="dp75">75dp</dimen>
+    <dimen name="dp70">70dp</dimen>
+    <dimen name="dp65">65dp</dimen>
+    <dimen name="dp60">60dp</dimen>
+    <dimen name="dp40">40dp</dimen>
+    <dimen name="dp45">45dp</dimen>
+    <dimen name="dp50">50dp</dimen>
+    <dimen name="dp35">35dp</dimen>
+    <dimen name="dp32">32dp</dimen>
+    <dimen name="dp30">30dp</dimen>
+    <dimen name="dp25">25dp</dimen>
+    <dimen name="dp23">23dp</dimen>
+    <dimen name="dp22">22dp</dimen>
+    <dimen name="dp20">20dp</dimen>
+    <dimen name="dp18">18dp</dimen>
+    <dimen name="dp16">16dp</dimen>
+    <dimen name="dp15">15dp</dimen>
+    <dimen name="dp14">14dp</dimen>
+    <dimen name="dp13">13dp</dimen>
+    <dimen name="dp12">12dp</dimen>
+    <dimen name="dp10">10dp</dimen>
+    <dimen name="dp9">9dp</dimen>
+    <dimen name="dp8">8dp</dimen>
+    <dimen name="dp7">7dp</dimen>
+    <dimen name="dp6">6dp</dimen>
+    <dimen name="dp5">5dp</dimen>
+    <dimen name="dp4">4dp</dimen>
+    <dimen name="dp3">3dp</dimen>
+    <dimen name="dp2">2dp</dimen>
+    <dimen name="dp1">1dp</dimen>
+    <dimen name="dp0">0dp</dimen>
+
+    <dimen name="selected_border_size">1dp</dimen>
+    <dimen name="grid_expected_size">150</dimen>
 
 
-
-
-
-
-
-    <dimen name="sp13">13sp</dimen>
-    <dimen name="sp14">14sp</dimen>
-    <dimen name="sp15">15sp</dimen>
-    <dimen name="sp16">16sp</dimen>
-
-    <dimen name="sp17">17sp</dimen>
-    <dimen name="sp18">18sp</dimen>
-    <dimen name="sp19">19sp</dimen>
-    <dimen name="sp20">20sp</dimen>
-
-    <dimen name="sp21">21sp</dimen>
-    <dimen name="sp22">22sp</dimen>
-    <dimen name="sp23">23sp</dimen>
-    <dimen name="sp24">24sp</dimen>
-    <dimen name="sp25">25sp</dimen>
-    <dimen name="sp26">26sp</dimen>
-    <dimen name="sp27">27sp</dimen>
-    <dimen name="sp28">28sp</dimen>
-    <dimen name="sp29">29sp</dimen>
-    <dimen name="sp30">30sp</dimen>
-
-    <dimen name="sp31">31sp</dimen>
-    <dimen name="sp32">32sp</dimen>
-    <dimen name="sp33">33sp</dimen>
-    <dimen name="sp34">34sp</dimen>
-    <dimen name="sp35">35sp</dimen>
-    <dimen name="sp36">36sp</dimen>
-    <dimen name="sp37">37sp</dimen>
-    <dimen name="sp38">38sp</dimen>
-    <dimen name="sp39">39sp</dimen>
-    <dimen name="sp40">40sp</dimen>
-    <dimen name="sp100">100sp</dimen>
-
-
-    <dimen name="fab_margin_right">30dp</dimen>
-    <dimen name="fab_margin_bottom">30dp</dimen>
-
-    <!--<dimen name="fab_margin">16dp</dimen>-->
-    <dimen name="cardCornerRadius">4dp</dimen>
-    <dimen name="cardElevation">4dp</dimen>
-    <dimen name="cardview_horizontal_padding">6dp</dimen>
-    <dimen name="cardview_vertical_padding">2dp</dimen>
-
-    <dimen name="num_button_w_h">52.0dip</dimen>
-    <dimen name="num_button_margintop">17.0dip</dimen>
-    <dimen name="num_button_marginleft_right">25.0dip</dimen>
-
+    <dimen name="thumbnail_size">50dp</dimen>
+    <dimen name="recycler_size">100dp</dimen>
+    <dimen name="thumbnail_horizontal_padding">3dp</dimen>
+    <dimen name="thumbnail_vertical_padding">10dp</dimen>
 
 </resources>
