--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
 
-    <external-path name="external_files"  path="."/>
-    <root-path name="external_files"   path="/storage/."/>
-    <external-path name="external_files" path="Android/data/com.mojodigi.selfiepro/"/>
+    <external-path name="external_files" path="." />
+    <root-path name="external_files" path="/storage/." />
+
 
 </paths>
+
+<!-- <external-path name="external_files" path="Android/data/com.mojodigi.selfiepro/"/>-->
